# openapi-schema.yml
@@ -233,6 +233,66 @@ paths:
               schema:
                 $ref: '#/components/schemas/TokenVerify'
           description: ''
+  /articles:
+    get:
+      operationId: articles_list
+      description: |-
+        Final accepted articles, read only view.
+        *Public*
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      tags:
+      - articles
+      security:
+      - basicAuth: []
+      - cookieAuth: []
+      - tokenAuth: []
+      - jwtAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedArticleList'
+          description: ''
+  /articles/{id}:
+    get:
+      operationId: articles_retrieve
+      description: |-
+        Final accepted articles, read only view.
+        *Public*
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: A unique integer value identifying this submission.
+        required: true
+      tags:
+      - articles
+      security:
+      - basicAuth: []
+      - cookieAuth: []
+      - tokenAuth: []
+      - jwtAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Article'
+          description: ''
   /auth/login:
     post:
       operationId: auth_login_create
@@ -732,6 +792,14 @@ paths:
           - passed
           - pending
       - in: query
+        name: analysis__status__isnull
+        schema:
+          type: boolean
+      - in: query
+        name: fetch__isnull
+        schema:
+          type: boolean
+      - in: query
         name: fetch__status
         schema:
           type: string
@@ -740,12 +808,20 @@ paths:
           - pending
           - rej_error
           - rej_fetch
+      - in: query
+        name: fetch__status__isnull
+        schema:
+          type: boolean
       - name: limit
         required: false
         in: query
         description: Number of results to return per page.
         schema:
           type: integer
+      - in: query
+        name: moderation__isnull
+        schema:
+          type: boolean
       - in: query
         name: moderation__status
         schema:
@@ -754,6 +830,10 @@ paths:
           - accepted
           - pending
           - rejected
+      - in: query
+        name: moderation__status__isnull
+        schema:
+          type: boolean
       - name: offset
         required: false
         in: query
@@ -1503,6 +1583,58 @@ paths:
           description: No response body
 components:
   schemas:
+    Article:
+      type: object
+      description: |-
+        An article is an approved submission and it takes the title
+        and description from either the automated bots or the moderation,
+        if the moderator entered any
+      properties:
+        url:
+          type: string
+          format: uri
+          readOnly: true
+        status:
+          type: string
+          readOnly: true
+        target_url:
+          type: string
+          format: uri
+          readOnly: true
+        title:
+          type: string
+          readOnly: true
+        description:
+          type: string
+          readOnly: true
+        thumbnail:
+          type: string
+          readOnly: true
+        last_updated:
+          type: string
+          format: date-time
+          readOnly: true
+        date_created:
+          type: string
+          format: date-time
+          readOnly: true
+        submitter:
+          type: string
+          readOnly: true
+        approver:
+          type: string
+          readOnly: true
+      required:
+      - approver
+      - date_created
+      - description
+      - last_updated
+      - status
+      - submitter
+      - target_url
+      - thumbnail
+      - title
+      - url
     AuthToken:
       type: object
       properties:
@@ -1618,6 +1750,26 @@ components:
       - accepted
       - rejected
       type: string
+    PaginatedArticleList:
+      type: object
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=400&limit=100
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=200&limit=100
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Article'
     PaginatedFetchList:
       type: object
       properties:
